# bunzo

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/builder/: Cargo.toml
crates/builder/src/: bundle.rs  conflict.rs  lib.rs  proposer.rs  sender.rs  task.rs  tracker.rs
crates/builder/src/strategy/: conditional.rs  direct.rs  mod.rs  router.rs
crates/pool/: Cargo.toml
crates/pool/src/: chain.rs  error.rs  lib.rs  pool.rs  reputation.rs  status.rs  validation.rs
crates/provider/: Cargo.toml
crates/provider/src/: contracts.rs  error.rs  gas_oracle.rs  lib.rs  traits.rs
crates/provider/src/alloy/: bundle_handler.rs  entry_point.rs  evm.rs  mod.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  eth.rs  lib.rs  server.rs
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs  local.rs  manager.rs
crates/types/: Cargo.toml
crates/types/src/: chain.rs  entity.rs  error.rs  event.rs  gas.rs  lib.rs  validation.rs
crates/types/src/user_operation/: mod.rs  v0_7.rs
