[package]
name = "bunzo-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bunzo-types.workspace = true
bunzo-provider.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
metrics.workspace = true

