[package]
name = "bunzo-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bunzo-types.workspace = true

alloy-primitives.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-signer.workspace = true

async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
metrics.workspace = true
const-hex.workspace = true
bytes = "1.11.1"
