[package]
name = "bunzo-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bunzo-types.workspace = true
bunzo-pool.workspace = true
bunzo-provider.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-types.workspace = true

async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
metrics.workspace = true
