[package]
name = "bunzo-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bunzo-types.workspace = true

alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-eips.workspace = true

async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
